--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="author" content="작성자 이름">
     
     <title>Page Title</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2126112474667181"
+     crossorigin="anonymous"></script>
   </head>
 
 
