--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <h1>Maruwi</h1>
 
     <a href="2048/index.html">2048 게임</a>
+    <a href="hextris/index.html">2048 게임</a>
   </body>
 </html>
