--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <meta name="description" content="페이지 설명">
-    <meta name="author" content="작성자 이름">
-    
-    <title>Page Title</title>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2126112474667181"
-     crossorigin="anonymous"></script>
+    <meta name="description" content="Simple Game">
+    <meta name="author" content="마루위">
+    <title>마루마루</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2126112474667181" crossorigin="anonymous"></script>
   </head>
 
 
@@ -15,6 +13,7 @@
     <h1>Maruwi</h1>
 
     <a href="2048/index.html">2048 게임</a>
-    <a href="hextris/index.html">2048 게임</a>
+    <br />
+    <a href="hextris/index.html">Hextris 게임</a>
   </body>
 </html>
