--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
     <a href="2048/index.html">2048 게임</a>
     <br />
     <a href="hextris/index.html">Hextris 게임</a>
+    <br />
+    <a href="towerBlock/index.html">towerBlock 게임</a>
   </body>
 </html>
+
