--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <a href="hextris/index.html">Hextris 게임</a>
     <br />
     <a href="towerBlock/index.html">towerBlock 게임</a>
+    <br />
+    <a href="tetris/index.html">tetris 게임</a>
   </body>
 </html>
 
