--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <a href="tetris/index.html">tetris 게임</a>
     <br />
     <a href="ticTacToe/index.html">Tic Tac Toe 게임</a>
+    <br />
+    <a href="buildingBlock/index.html">Tic Tac Toe 게임</a>
   </body>
 </html>
 
