--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <br />
     <a href="ticTacToe/index.html">Tic Tac Toe 게임</a>
     <br />
-    <a href="buildingBlock/index.html">Building Drop 게임__</a>
+    <a href="buildingBlock/index.html">Building Drop 게임</a>
   </body>
 </html>
 
