stickHero 게임 추가

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <a href="ticTacToe/index.html">Tic Tac Toe 게임</a>
     <br />
     <a href="buildingBlock/index.html">Building Drop 게임</a>
+    <br />
+    <a href="stickHero/dist/index.html">stick Hero 게임</a>
   </body>
 </html>
 
