--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="author" content="마루위">
     <title>마루마루</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2126112474667181" crossorigin="anonymous"></script>
+    <script src="index.js"></script>
   </head>
 
 
@@ -25,6 +26,8 @@
     <a href="buildingBlock/index.html">Building Drop 게임</a>
     <br />
     <a href="stickHero/dist/index.html">stick Hero 게임</a>
+    <br />
+    <a href="back-to-home/electronapp/index.html">back to home 게임</a>
   </body>
 </html>
 
