--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
     <a href="stickHero/dist/index.html">stick Hero 게임</a>
     <br />
     <a href="back-to-home/electronapp/index.html">back to home 게임</a>
-	<br />
+	  <br />
     <a href="colorMatch/index.html">color Match 게임</a>
-	<br />
+	  <br />
     <a href="memoryMatching/index.html">memory Matching 게임</a>
+    <br />
+    <a href="infiniteRunner/index.html">infinite Runner 게임</a>
   </body>
 </html>
 
